// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`repeat '' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`repeat 'a' conditional success tests AST to match snapshot 1`] = `
[
  "a",
]
`;

exports[`repeat 'aa' conditional success tests AST to match snapshot 1`] = `
[
  "a",
  "a",
]
`;

exports[`repeat 'aaa' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 3,
    "index": 2,
    "line": 1,
  },
}
`;

exports[`repeat 'abaa' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;
